--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ isort==4.2.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 msgpack-python==0.5.1
+psycopg2==2.7.3.2
 pylint==1.8.2
 pytz==2017.3
 redis==2.10.6
