--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+asgi-rabbitmq==0.5.5
 asgi-redis==1.4.3
 asgiref==1.1.2
 astroid==1.6.1
 attrs==17.4.0
 autobahn==17.10.1
 Automat==0.6.0
+cached-property==1.3.1
 channels==1.1.8
+configparser==3.5.0
 constantly==15.1.0
 daphne==1.4.2
 dj-database-url==0.4.2
@@ -16,6 +19,7 @@ isort==4.2.15
 lazy-object-proxy==1.3.1
 mccabe==0.6.1
 msgpack-python==0.5.1
+pika==0.11.2
 psycopg2==2.7.3.2
 pylint==1.8.2
 pytz==2017.3
